--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,13 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
+/* .divhit{
+  height: 25%;
+  width: ;
+} */
